--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #FFFFFF;
+  font-size: 15px;
+  font-family: 'Oswald', sans-serif;
+}
+.text-container {
+  margin-top: 30px;
+  line-height: 36px;
+  font-size: 25px;
+}
+.price {
+  color: #dd0000;
 }
 
-.App-link {
-  color: #61dafb;
+.spacing-my {
+  margin: 10px 0 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spacing-top-x {
+  margin-top: 28px;
 }
