--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   color: #FFFFFF;
   font-size: 15px;
   font-family: 'Oswald', sans-serif;
+  text-shadow: 1px 1px 10px #FFFFFF;
 }
 .text-container {
   margin-top: 30px;
@@ -14,6 +15,29 @@
 }
 .price {
   color: #dd0000;
+}
+
+.terms {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.text-footer-container {
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+
+.terms:hover {
+  opacity: 80%;
+}
+
+.copy {
+  font-size: 15px;
+}
+
+.buy:hover {
+  cursor: pointer;
+  opacity: 0.9;
 }
 
 .spacing-my {
