--- a/src/components/counte-banner/counter-banner.css
+++ b/src/components/counte-banner/counter-banner.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #5c0164;
+    background-color: #0e8a0e;
     width: 100%;
     height: 6rem;
     display: flex;
