--- a/src/components/counte-banner/counter-banner.css
+++ b/src/components/counte-banner/counter-banner.css
@@ -1,4 +1,4 @@
-.container {
+.container-counter {
     background-color: #0e8a0e;
     width: 100%;
     height: 6rem;
@@ -13,3 +13,12 @@
     font-size: 30px;
     font-family: 'Oswald', sans-serif;
 }
+
+@media screen and (max-width: 480px) {
+    .counter-title {
+      font-size: 23px;
+    }
+    .container {
+
+    }
+  }
