--- a/src/components/video-player/video-player.css
+++ b/src/components/video-player/video-player.css
@@ -39,3 +39,25 @@ video {
     font-size: 60px;
     margin-top: 2px;
 }
+
+@media screen and (max-width: 480px) {
+    video {
+      width: 16rem;
+      height: fit-content;
+    }
+
+    .active-video {
+        width: fit-content;
+        font-size: 15px;
+        height: fit-content;
+        padding: 5px;
+        margin-top: 20px;
+    }
+    .resp-txt {
+        font-size: 12px;
+    }
+    .sound-icon {
+        font-size: 28px;
+        text-align: center;
+    }
+  }
