adding important to ios video controls panel

--- a/src/components/video-player/video-player.css
+++ b/src/components/video-player/video-player.css
@@ -62,6 +62,7 @@ video {
     }
   }
 
-  video::-webkit-media-controls {
-    display: none;
+  video::-webkit-media-controls-panel {
+    display: none !important;
+    opacity: 1 !important;
 }
