--- a/src/components/video-player/video-player.css
+++ b/src/components/video-player/video-player.css
@@ -62,19 +62,13 @@ video {
     }
   }
 
-video::-webkit-media-controls-panel {
-    display: none !important;
-    opacity: 1 !important;
-}
-
-video::-webkit-media-controls-mute-button {
-    display: none !important;
-}
-
-video::-webkit-media-controls-play-button {
-    display: none !important;
-}
-
-video::-webkit-media-controls-volume-slider {
-    display: none !important;
+/* Hide video controls on mobile Safari */
+@media (max-width: 768px) {
+    video::-webkit-media-controls {
+      display: none !important;
+    }
+    video::-webkit-media-controls-panel {
+        display: none !important;
+        opacity: 1 !important;
+    }
 }
